[package]
name = "rust"
version = "0.1.0"
edition = "2021"
authors = ["prajesh <prajesh.eleven118@gmail.com>"]
description = "Rust package template."
readme = "README.md"
repository = "https://github.com/pr4j3sh/rust"
license = "MIT"
keywords = ["template", "rust", "frames"]
categories = ["template-engine", "command-line-utilities"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
